k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: stella-rescue
  labels:
    app: stella-rescue
spec:
  to:
    kind: Service
    name: stella-rescue
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
